# Mail-Gen-AI-Powered-Agentic-Email-Generator-Scheduler

./: MailGen_Phase2_Report.docx  PHASE_1_BUSINESS_ANALYSIS.md  PHASE_1_DOCUMENTATION.md  PHASE_3_TECHNICAL_SUMMARY.md  how it works.md
email_geneartion/: .env  .env.example  .gitignore  README.md  WEBAPP_README.md  generated_email.txt  pyproject.toml  report.md  requirements.txt  run_flask_app.py  start_webapp.bat  test_scheduler.py
email_geneartion/knowledge/: user_preference.txt
email_geneartion/src/email_geneartion/: app.py  crew.py  doc_reader.py  email_sender.py  main.py  send_final_email.py
email_geneartion/src/email_geneartion/config/: agents.yaml  tasks.yaml
email_geneartion/src/email_geneartion/templates/: base.html  index.html  limitations.html  scheduled_emails.html
email_geneartion/src/email_geneartion/tools/: custom_tool.py
email_geneartion/uploads/: req.txt
